# squill

./: .gitignore  CHANGELOG.md  CODEOWNERS  Cargo.toml  LICENSE  README.md  about.hbs  about.toml  deny.toml  docker-compose.yml  release.toml
.github/workflows/: audit.yml  pull_request.yml  release-plz.yml  release.yml
scripts/: generate-third-party-licenses
squill/: CHANGELOG.md  Cargo.toml
squill-cli/: CHANGELOG.md  Cargo.toml
squill-cli/src/: main.rs
squill/src/: config.rs  lib.rs  migrate.rs  status.rs  template.rs  testing.rs
squill/src/testing/: create_table.down.sql  create_table.up.sql  no_op_yes_tx.sql
src/: config.rs  db.rs  fs.rs  index.rs  lib.rs  main.rs  migrate.rs  status.rs  template.rs  testing.rs
src/templates/: init.up.sql
src/testing/: custom.down.sql  custom.up.sql  no_op_no_tx.sql
templates/: new.down.sql  new.up.sql
