[package]
name = "squill"
version = "0.6.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Database migrations for PostgreSQL"
homepage = "https://github.com/jdkaplan/squill"
repository = "https://github.com/jdkaplan/squill"
readme = "README.md"

include = [
    "src",
    "LICENSE-APACHE",
    "LICENSE-MIT",
]

[dependencies]
anyhow = "1.0.78"
clap = { version = "4.4.12", features = ["derive"] }
figment = { version = "0.10.13", features = ["env", "toml"] }
lazy_static = "1.4.0"
regex = "1.10.3"
serde = { version = "1.0.196", features = ["derive"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio-native-tls", "postgres", "time", "uuid"] }
tabled = "0.15.0"
tera = { version = "1.19.1", default-features = false }
thiserror = "1.0.57"
time = { version = "0.3.32", features = ["formatting", "serde"] }
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dev-dependencies]
tempfile = "3.5.0"
uuid = { version = "1.6.1", features = ["v4", "serde"] }

[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.10.0"
# CI backends to support
ci = ["github"]
# Whether cargo-dist should create a Github Release or use an existing draft
create-release = false
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
