[workspace]
resolver = "2"
members = ["squill", "squill-cli"]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/jdkaplan/squill"
repository = "https://github.com/jdkaplan/squill"
readme = "README.md"

[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.22.1"
# CI backends to support
ci = "github"
# Whether cargo-dist should create a Github Release or use an existing draft
create-release = false
# The installers to generate for each app
installers = ["shell", "npm"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
# Which actions to run on pull requests
pr-run-mode = "plan"
# The archive format to use for windows builds (defaults .zip)
windows-archive = ".tar.gz"
# The archive format to use for non-windows builds (defaults .tar.xz)
unix-archive = ".tar.gz"
# The npm package should have this name
npm-package = "squill-cli"
# Publish jobs to run in CI
publish-jobs = ["npm"]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false

[[workspace.metadata.dist.extra-artifacts]]
artifacts = ["THIRD_PARTY_LICENSES"]
build = ["./scripts/generate-third-party-licenses"]
