[package]
name = "squill-cli"
version = "0.9.0"
description = "Command-line tool for PostgreSQL database migrations"

edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

include = [
    "src",
    "LICENSE-APACHE",
    "LICENSE-MIT",
]

[[bin]]
name = "squill"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.78"
clap = { version = "4.4.12", features = ["derive"] }
figment = { version = "0.10.19", features = ["env", "toml"] }
serde = { version = "1.0.203", features = ["derive"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls"] }
squill = { version = "=0.9.0", path = "../squill" }
tabled = "0.15.0"
time = "0.3.36"
tokio = { version = "1.35.1", features = ["full"] }
tracing-subscriber = "0.3.18"
