[package]
name = "squill-cli"
version = "0.9.1"
description = "Command-line tool for PostgreSQL database migrations"

edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

include = [
    "src",
    "LICENSE-APACHE",
    "LICENSE-MIT",
]

[[bin]]
name = "squill"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.78"
clap = { version = "4.5.8", features = ["derive"] }
figment = { version = "0.10.19", features = ["env", "toml"] }
serde = { version = "1.0.203", features = ["derive"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls"] }
squill = { version = "=0.9.1", path = "../squill" }
tabled = "0.15.0"
time = "0.3.36"
tokio = { version = "1.38.0", features = ["full"] }
tracing-subscriber = "0.3.18"
