[package]
name = "squill-cli"
version = "0.9.4"
description = "Command-line tool for PostgreSQL database migrations"

edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

include = [
    "src",
    "LICENSE-APACHE",
    "LICENSE-MIT",
]

[[bin]]
name = "squill"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.78"
clap = { version = "4.5.8", features = ["derive"] }
figment = { version = "0.10.19", features = ["env", "toml"] }
serde = { version = "1.0.203", features = ["derive"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls"] }
squill = { version = "=0.10.0", path = "../squill" }
tabled = { version = "0.16.0", git = "https://github.com/jdkaplan/tabled.git", rev="6462758e28619af0b578c37220b74e4e660e0d4f" }
time = "0.3.36"
tokio = { version = "1.42.0", features = ["full"] }
tracing-subscriber = "0.3.18"
