[package]
name = "squill"
version = "0.9.1"
description = "Manage PostgreSQL database migrations"

edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

include = [
    "src",
    "LICENSE-APACHE",
    "LICENSE-MIT",
]

[dependencies]
lazy_static = "1.4.0"
regex = "1.10.3"
sqlx = { version = "0.7.3", features = ["postgres", "time"] }
tera = { version = "1.19.1", default-features = false }
thiserror = "1.0.61"
time = "0.3.36"
tracing = "0.1.40"

[dev-dependencies]
anyhow = "1.0.78"
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls"] }
tempfile = "3.5.0"
tokio = { version = "1.38.0", features = ["full"] }
uuid = { version = "1.6.1", features = ["v4"] }
