[package]
name = "squill"
version = "0.9.1"
description = "Manage PostgreSQL database migrations"

edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

include = [
    "src",
    "LICENSE-APACHE",
    "LICENSE-MIT",
]

[dependencies]
lazy_static = "1.4.0"
regex = "1.10.5"
sqlx = { version = "0.8.2", features = ["postgres", "time"] }
tera = { version = "1.20.0", default-features = false }
thiserror = "1.0.61"
time = "0.3.36"
tracing = "0.1.40"

[dev-dependencies]
anyhow = "1.0.78"
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls"] }
tempfile = "3.5.0"
tokio = { version = "1.38.0", features = ["full"] }
uuid = { version = "1.10.0", features = ["v4"] }
